Authentication integration DB-BE-FE (#43)
* Server side authentication. Small adjustments to auth. Little bit of cleanup

* Auth integration with the FE

* Small fix in ApiService (not used, but okay)
