# backend/Assistant-WebService/Assistant.Domain/ViewModels/AccessToken.cs
@@ -5,7 +5,7 @@ namespace Assistant.Domain.ViewModels
     public class AccessToken
     {
         public string UserId { get; set; }
-        public string UserName { get; set; }
-        public DateTimeOffset ExpirestAt { get; set; }
+        public string FullName { get; set; }
+        public DateTimeOffset ExpiresAt { get; set; }
     }
 }
