# backend/Assistant-WebService/Assistant.Domain/ViewModels/Admin/CreateUserViewModel.cs
@@ -1,0 +1,9 @@
+namespace Assistant.Domain.ViewModels.Admin
+{
+    public class CreateUserViewModel
+    {
+        public string LoginName { get; set; }
+        public string FullName { get; set; }
+        public string Password { get; set; }
+    }
+}
