# backend/Assistant-WebService/Assistant.Domain/ViewModels/Admin/UserViewModel.cs
@@ -1,23 +1,15 @@
+using System.Text.Json.Serialization;
+
 namespace Assistant.Domain.ViewModels.Admin
 {
     public class UserViewModel
     {
+        [JsonIgnore]
         public string Id { get; set; }
-        public string UserName { get; set; }
-
+        public string LoginName { get; set; }
+        public string FullName { get; set; }
         public string Password { get; set; }
         public string Salt { get; set; }
-    }
-
-    public class CreateUserViewModel
-    {
-        public string UserName { get; set; }
-        public string Password { get; set; }
-    }
-
-    public class UpdateUserViewModel : CreateUserViewModel
-    {
-        public string Id { get; set; }
     }
 
     public class UserContextViewModel
