# backend/Assistant-WebService/Assistant.Domain/ViewModels/PasswordLoginResponseViewModel.cs
@@ -3,5 +3,6 @@ namespace Assistant.Domain.ViewModels
     public class PasswordLoginResponseViewModel
     {
         public string AccessToken { get; set; }
+        public string FullName { get; set; }
     }
 }
